adicionados imagens/pattern001.png

--- a/pag002.html
+++ b/pag002.html
@@ -389,6 +389,32 @@
         <p>Você pode formatar o menu de navegação usando as configurações padrões como <strong>width, heith, margin e padding.</strong></p>
         <p>Também pode usar a pseudo-classe :<strong>hover</strong> para fazer modificações quando o mouse passar em cima.</p>
         <p>Ainda mais uma coisa que pode fazer é usa uma transição usando a tag <strong>transition-duration: 0.5s;</strong> para colocar um efeito de transição.</p>
+        <h2>Usando imagens de fundo.</h2>
+        <p>Até então conhecemos 2 formas de fundos de imagens, sendo elas.
+            <ul>
+                <li>background-color</li>
+                <li>background-image (para degradês)</li>
+            </ul>
+        <p>Mas, agora aprenderemos mais uma, que permitira colocar uma imagem no fundo, que é:</p>
+        <ul>
+            <li>background-image url("")</li>
+        </ul>
+        <p>Dentro da URL selecione o arquivo de imagem previamente adicionado a pasta do arquivo.</p>
+        <p>Exemplo:</p>
+        <div id="divimagem"></div>
+
+        <h2>Personalização de fundos com imagens.</h2>
+        <p>A seguir você verá algumas formas de organização de fundo de imagens</p>
+        <h3>Tamanho da imagem de fundo</h3>
+        <p>Para definir o tamanho da imagem usamos a tag <strong>background-size</strong></p>
+        <h2>Algumas formatações adicionais.</h2>
+        <h3>Para que a imagem se repita</h3>
+        <p>Por padrão qualquer imagem será repetida quando adiconada ao fundo, mas a tag utilizada para isso é <strong>background-repeat:repeat;</strong></p>
+        <h3>Para que não se repita</h3>
+        <p>usamos:<strong>background-repeat: no repeat;</strong></p>
+        <h3>Para que se pepita somente na horizontal ou vertical</h3>
+        <p>Usamos respectivamente:<strong>background-repeat:repeat-x</strong> e <strong>background-repeat: repeat-y;</strong></p>
+        
 
     </main>
 
